<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">
        <Button
                android:text="@string/limpiar"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/btnLimpiar"
                android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
                app:layout_constraintStart_toEndOf="@+id/btnEnviar" android:layout_marginStart="16dp"
                app:layout_constraintHorizontal_bias="0.5"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/ckbCsharp"
                app:layout_constraintVertical_bias="1.0" android:onClick="limpiarDatos"/>
        <CheckBox
                android:text="@string/c_sharp"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/ckbCsharp"
                app:layout_constraintTop_toBottomOf="@+id/ckbGo" android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="36dp" app:layout_constraintStart_toEndOf="@+id/ckbC"
                app:layout_constraintHorizontal_bias="0.695"/>
        <CheckBox
                android:text="@string/c_lang"
                android:layout_width="77dp"
                android:layout_height="48dp" android:id="@+id/ckbC"
                android:layout_marginStart="56dp" app:layout_constraintStart_toEndOf="@+id/tvLenguaje"
                app:layout_constraintTop_toBottomOf="@+id/ckbJS" android:layout_marginTop="16dp"/>
        <CheckBox
                android:text="@string/go"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/ckbGo"
                android:layout_marginStart="52dp" app:layout_constraintStart_toEndOf="@+id/ckbJS"
                app:layout_constraintTop_toBottomOf="@+id/ckbPython" android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"/>
        <CheckBox
                android:text="@string/js"
                android:layout_width="61dp"
                android:layout_height="47dp" android:id="@+id/ckbJS"
                android:layout_marginStart="56dp" app:layout_constraintStart_toEndOf="@+id/tvLenguaje"
                app:layout_constraintTop_toBottomOf="@+id/ckbJava" android:layout_marginTop="16dp"/>
        <TextView
                android:text="@string/tv_lenguaje"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/tvLenguaje"
                android:layout_marginTop="28dp"
                app:layout_constraintTop_toBottomOf="@+id/tvProgramar" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:textSize="16sp"/>
        <TextView
                android:text="@string/tv_programar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/tvProgramar"
                android:layout_marginTop="28dp"
                app:layout_constraintTop_toBottomOf="@+id/tvNacim" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:textSize="16sp"/>
        <TextView
                android:text="@string/tv_nacimiento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/tvNacim"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/tvGenero" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:textSize="16sp"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/txtApellido"
                android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp" android:hint="@string/lastname" app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toBottomOf="@+id/txtNombre"/>
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:ems="10"
                android:id="@+id/txtNacim"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:hint="@string/nacimiento"
                android:layout_marginStart="39dp"
                app:layout_constraintStart_toEndOf="@+id/tvNacim"
                app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/spnGenero" android:textSize="18sp"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/txtNombre"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp" android:hint="@string/name"/>
        <TextView
                android:text="@string/tv_genero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/tvGenero"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/txtApellido" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:textSize="16sp"/>
        <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/spnGenero"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="72dp"
                app:layout_constraintStart_toEndOf="@+id/tvGenero" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/txtApellido" app:layout_constraintHorizontal_bias="1.0"
                android:entries="@array/generos"/>
        <RadioGroup
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toEndOf="@+id/tvProgramar"
                app:layout_constraintHorizontal_bias="0.0"
                android:orientation="horizontal" android:id="@+id/radioGroup" android:layout_marginTop="28dp"
                app:layout_constraintTop_toBottomOf="@+id/txtNacim">
            <RadioButton
                    android:text="@string/si"
                    android:layout_width="106dp"
                    android:layout_height="23dp" android:id="@+id/rdBtnSi"/>
            <RadioButton
                    android:text="@string/no"
                    android:layout_width="98dp"
                    android:layout_height="23dp" android:id="@+id/rdBtnNo"/>
        </RadioGroup>
        <CheckBox
                android:text="@string/java"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/ckbJava"
                android:layout_marginStart="56dp" app:layout_constraintStart_toEndOf="@+id/tvLenguaje"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup" android:layout_marginTop="13dp"/>
        <CheckBox
                android:text="@string/python"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/ckbPython"
                android:layout_marginStart="52dp" app:layout_constraintStart_toEndOf="@+id/ckbJava"
                android:layout_marginTop="13dp" app:layout_constraintTop_toBottomOf="@+id/radioGroup"
                android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"/>
        <Button
                android:text="@string/enviar"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/btnEnviar"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/btnLimpiar"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/ckbC"
                app:layout_constraintVertical_bias="1.0" android:onClick="validarDatos"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
